# fc_journey_validation

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
.github/workflows/: release.yml
data/: clwqj8ll20yoagjnzupamqawv.json  clwrdq7dn0ktrbs8h5lxytbwr.json
data/not-in-france/: clvidq6lnkavbdprin6hcepgl.json  clvik4mu1lkocdpris3gimaww.json  clvikl0f4lmzadprin4jdssu8.json
src/: cli.rs  error.rs  france.rs  input.rs  is_point_in_france.rs  journey.rs  journeys.rs  lib.rs  main.rs  normalize_frechet_distance.rs  output.rs  point.rs  points.rs  trace.rs  traces.rs  traces_to_geojson.rs  traces_validation.rs  validate_journey.rs  validate_traces.rs  validation.rs  visualize.rs
