[package]
name = "fc_journey_validation"
description = "Validate GPS trajectories using a set of rules"
version = "1.0.1"
readme = "README.md"
license = "MIT"
edition = "2021"
homepage = "https://github.com/ecov/fc_journey_validation"
repository = "https://github.com/ecov/fc_journey_validation"
keywords = ["geospatial"]
categories = ["science::geo"]
authors = ["pnodet <paul@nivalis.studio>", "pnwa <nicolas@nivalis.studio>"]
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
serde_json = { version = "1.0.117" }
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.8.1" }
rayon = "1.10.0"
geo = { version = "0.28.0", features = ["use-serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
geojson = "0.24.1"
once_cell = { version = "1.19.0" }
thiserror = { version = "1.0.61" }
open = { version = "5.1.4" }
urlencoding = { version = "2.1.3" }

[build-dependencies]
geo = { version = "0.28.0", features = ["use-serde"] }
geojson = "0.24.1"
serde_json = { version = "1.0.117" }
